# ActivTracker

./: .gitignore  .pre-commit-config.yaml  README.md  activitytracker.nginx  activitytracker.service
src/: .env.template  Makefile  app.py  auth_helpers.py  cli.py  create_db.py  database.py  forms.py  generate_secret.py  model_helpers.py  models.py  pyproject.toml  utils.py
src/deploy/templates/: activitytracker.nginx.http.template  activitytracker.nginx.ssl.template  activitytracker.service.template
src/routes/: actions.py  api.py  auth.py  dashboard.py  settings.py
src/scripts/: render_templates.py
src/static/css/: actions.css  alerts.css  auth.css  base.css  buttons.css  card.css  dashboard.css  form.css  nav.css  properties.css  settings.css  summary.css  token.css  view_action_history.css
src/templates/: actions.html  actions.j2  activity_summary.j2  base.html  dashboard.j2  edit_action.j2  edit_activity.j2  index.html  log_activity.html  log_activity.j2  login.j2  new_action.j2  register.html  register.j2  settings.j2  summary.j2  token.j2  view_action.html  view_action.j2  view_action_history.j2
